--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     },
     "dependencies": {
         "hammerjs": "^2.0.8",
-        "react": "^16.13.0",
-        "typescript": "~3.7.2"
+        "react": "^17.0.1",
+        "typescript": "4.0.5"
     },
     "devDependencies": {
         "@types/hammerjs": "^2.0.36",
